# lab

./: .env  .env.example  .gitignore  CHEATING_EVIDENCE_IMPLEMENTATION.md  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START_GUIDE.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx-host.conf  nginx-proxy.conf  nginx.conf  Шахс каратаси калити.docx
.claude/: settings.json
backend/: .env.template  Dockerfile  README.md  entrypoint.sh  pyproject.toml
docs/: host-nginx-setup.md  psychology-eysenck-explain.md  psychology-eysenck-simple.md  psychology-instruction-guide.md  psychology-stai-explain.md
face-detection/: Dockerfile  README.md  pyproject.toml
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
ndktu-student-face-detection/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
ndktu-student-face-detection/app/api/: router.py
ndktu-student-face-detection/app/api/v1/: stream.py  video.py
ndktu-student-face-detection/app/core/: config.py  logging.py
ndktu-student-face-detection/app/models/: schemas.py
ndktu-student-face-detection/app/services/: face_detector.py
ndktu-student-face-detection/app/utils/: face_storage.py  file_utils.py
ndktu-student-face-detection/tests/integration/: test_analyze_endpoint.py
ndktu-student-face-detection/tests/unit/: test_video_utils.py
ndktu-student-platform/: .gitignore  DOCKER_SETUP.md  GITHUB_SECRETS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx-host.conf  nginx-proxy.conf  nginx.conf
scripts/: deploy.sh  generate-psychology-template.cjs  generate-temperament-xlsx.cjs  generate_assets.py  merge.sh  restore.sh  (+1 more)
(+556 files in other folders)
