[project]
name = "ndktu-student-face-detection"
version = "1.0.0"
description = "Two-face video detection REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mediapipe>=0.10.32",
    "opencv-python-headless>=4.13.0.92",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
